--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-12 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Products</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Products</h2>
-          <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-9 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
@@ -336,7 +336,7 @@
               <div class="group relative">
                 <div
                   class="relative h-80 w-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
-                  <img src="img/equipments/3.jpg" alt="" class="h-full w-full object-cover object-center">
+                  <img src="img/equipments/6.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
                 <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
@@ -380,7 +380,7 @@
               <div class="group relative">
                 <div
                   class="relative h-80 w-full h-full overflow-hidden rounded-lg bg-white group-hover:opacity-75 sm:aspect-w-16 sm:aspect-h-10 sm:h-64 lg:aspect-w-16 lg:aspect-h-10">
-                  <img src="img/equipments/6.jpg" alt="" class="h-full w-full object-cover object-center">
+                  <img src="img/equipments/3.jpg" alt="" class="h-full w-full object-cover object-center">
                 </div>
                 <!-- <h3 class="mt-6 text-sm text-gray-500">
                   <a href="#">
@@ -503,7 +503,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/photoes/2.jpg" alt=""
+                <img src="img/photoes/11.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <!-- <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3> -->
@@ -513,7 +513,17 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/photoes/3.jpg" alt=""
+                <img src="img/photoes/10.jpg" alt=""
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <!-- <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3> -->
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/photoes/7.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <!-- <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3> -->
@@ -533,7 +543,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/photoes/7.jpg" alt=""
+                <img src="img/photoes/3.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <!-- <h3 class="mt-4 text-sm text-gray-700">Precision Products</h3> -->
@@ -543,17 +553,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/photoes/10.jpg" alt=""
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/photoes/11.jpg" alt=""
+                <img src="img/photoes/2.jpg" alt=""
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <!-- <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3> -->
@@ -570,49 +570,39 @@
           <br />
           <div
             class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8 items-center">
-            <a href="#" class="group">
-              <div class="w-full overflow-hidden rounded-lg bg-gray-200">
-                <img src="img/customers/samsung.jpg" alt="" class="object-cover object-center group-hover:opacity-75">
+            <div class="group bg-white">
+              <div class="w-full overflow-hidden rounded-lg pb-10">
+                <img src="img/customers/samsung.jpg" alt="sansung" class="object-cover object-center group-hover:opacity-75">
               </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">自动打螺丝设备</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div class="w-full overflow-hidden rounded-lg">
-                <img src="img/customers/lenovo.jpg" alt=""
+                <img src="img/customers/lenovo.jpg" alt="lenovo"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">视觉检测设备系统</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
-              <div class="rounded-lg">
-                <img src="img/customers/hp.jpg" alt=""
+            <div class="group">
+              <div class="rounded-lg flex justify-center">
+                <img src="img/customers/hp.jpg" alt="hp"
                   class="w-1/2 h-1/2 object-cover object-center group-hover:opacity-75">
               </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">硒鼓组装设备</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div class="w-full rounded-lg bg-gray-200">
-                <img src="img/customers/snbc.jpg" alt=""
+                <img src="img/customers/snbc.jpg" alt="snbc"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">柔性胶贴组装治具</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
 
-            <a href="#" class="group">
+            <div class="group">
               <div class="w-full rounded-lg bg-gray-200">
-                <img src="img/customers/wego.jpg" alt=""
+                <img src="img/customers/wego.jpg" alt="wego"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
-              <!-- <h3 class="mt-4 text-sm text-gray-700">扭力传感器测试设备</h3> -->
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </a>
+            </div>
           </div>
         </div>
       </div>
