--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="pt-10 pb-80 sm:pt-24 sm:pb-40 lg:pt-10 lg:pb-10">
           <div class="relative mx-auto max-w-7xl px-4 sm:static sm:px-6 lg:px-8">
             <h1 class="font text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Introduction</h1>
-            <div class="float-right sm:max-w-lg max-w-lg">
+            <div class="float-right max-w-xl sm:max-w-sm md:max-w-lg lg:max-w-xl">
               <img src="img/company.jpg" alt="company" class="rounded-lg">
             </div>
             <p class="mt-4 text-xl text-gray-500">
