--- a/index.html
+++ b/index.html
@@ -174,67 +174,10 @@
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-12 sm:px-6 lg:max-w-7xl lg:px-8">
           <h2 class="sr-only">Products</h2>
           <h2 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl pb-8">Products</h2>
+          <div class="center text-center py-10">
+            <h2 class="mt-4 text-md">Precision Products</h2>
+          </div>
           <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-9 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/a.jpg" alt="Automatic Screw Machine"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Automatic Screw Machine</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/2.jpg" alt="Visual Inspection Equipment"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/3.jpg" alt="Cartridge Assembly Equipment"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/4.jpg" alt="Plastic Sticker Assembly Fixture"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Plastic Sticker Assembly Fixture</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/5.jpg" alt="Torque Sensor Test Equipment"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Torque Sensor Test Equipment</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
-            <div class="group">
-              <div
-                class="aspect-w-16 aspect-h-9 w-full xoverflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/6.jpg" alt="Heavy Industrial Polish Equipment"
-                  class="w-full object-cover object-center group-hover:opacity-75">
-              </div>
-              <h3 class="mt-4 text-sm text-gray-700">Heavy Industrial Polish Equipment</h3>
-              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
-            </div>
-
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
@@ -292,6 +235,71 @@
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Prototype</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+          </div>
+            <div class="center text-center py-10">
+              <h2 class="mt-4 text-md">Automatic Machines</h2>
+            </div>
+            <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 xl:gap-x-8">
+  
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-9 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/a.jpg" alt="Automatic Screw Machine"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Automatic Screw Machine</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/2.jpg" alt="Visual Inspection Equipment"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Visual Inspection Equipment</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/3.jpg" alt="Cartridge Assembly Equipment"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Cartridge Assembly Equipment</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/4.jpg" alt="Plastic Sticker Assembly Fixture"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Plastic Sticker Assembly Fixture</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/5.jpg" alt="Torque Sensor Test Equipment"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Torque Sensor Test Equipment</h3>
+              <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
+            </div>
+
+            <div class="group">
+              <div
+                class="aspect-w-16 aspect-h-9 w-full xoverflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
+                <img src="img/products/6.jpg" alt="Heavy Industrial Polish Equipment"
+                  class="w-full object-cover object-center group-hover:opacity-75">
+              </div>
+              <h3 class="mt-4 text-sm text-gray-700">Heavy Industrial Polish Equipment</h3>
               <!-- <p class="mt-1 text-lg font-medium text-gray-900">$</p> -->
             </div>
           </div>
@@ -400,92 +408,74 @@
                 <th class="border border-slate-600">Equipment</th>
                 <th class="border border-slate-600">Brand</th>
                 <th class="border border-slate-600">Model</th>
-                <th class="border border-slate-600">Quantity</th>
                 <th class="border border-slate-600">Note</th>
               </tr><tr>
                 <td rowspan="4" class="border border-slate-600">CNC Drilling Machine</td>
                 <td>Brother</td>
                 <td>S500Z2N</td>
-                <td>3</td>
                 <td rowspan="6" class="border border-slate-600">CNC Machine</td>
               </tr><tr>
                 <td>Brother</td>
                 <td>S700Z2N</td>
-                <td>1</td>
               </tr><tr>
                 <td>JiaTie</td>
                 <td>540</td>
-                <td>3</td>
               </tr><tr>
                 <td class="border-b border-slate-600">TaiQunJingJi</td>
                 <td class="border-b border-slate-600">540</td>
-                <td class="border-b border-slate-600">6</td>
               </tr><tr>
                 <td rowspan="2" class="border border-slate-600">CNC Machine</td>
                 <td>QiaoFeng</td>
                 <td>V11</td>
-                <td>2</td>
               </tr><tr>
                 <td class="border-b border-slate-600">QiaoFeng</td>
                 <td class="border-b border-slate-600">V8</td>
-                <td class="border-b border-slate-600">1</td>
               </tr><tr>
                 <td rowspan="2" class="border border-slate-600">WEDM Machine</td>
                 <td>SODICK</td>
                 <td>SL400G</td>
-                <td>2</td>
                 <td rowspan="3" class="border border-slate-600">EDM Machine</td>
               </tr><tr>
                 <td>QingHong</td>
                 <td>540</td>
-                <td>2</td>
               </tr><tr>
                 <td class="border border-slate-600">EDM Machine</td>
                 <td class="border-b border-slate-600">MAKINO</td>
                 <td class="border-b border-slate-600">EDNC85</td>
-                <td class="border-b border-slate-600">3</td>
               </tr><tr>
                 <td class="border border-slate-600">Lathe</td>
                 <td>ShenYangJiChuang</td>
                 <td>CW6163</td>
-                <td>1</td>
                 <td rowspan="3" class="border border-slate-600">Machine</td>
               </tr><tr>
                 <td class="border border-slate-600">Milling Machine</td>
                 <td>XuZheng</td>
                 <td>4#</td>
-                <td>4</td>
               </tr><tr>
                 <td class="border border-slate-600">Grinding Machine</td>
                 <td class="border-b border-slate-600">Hangzhou Grinder Machine</td>
                 <td class="border-b border-slate-600">1030</td>
-                <td class="border-b border-slate-600">4</td>
               </tr><tr>
                 <td class="border border-slate-600">2D Projector Equipment</td>
                 <td>Taiwan WanHao</td>
                 <td>VTM-1510G</td>
-                <td>2</td>
                 <td rowspan="4" class="border border-slate-600">Measurement Equipment</td>
               </tr><tr>
                 <td class="border border-slate-600">Digital Height Gauge</td>
                 <td>Switzerland</td>
                 <td>LH-600H</td>
-                <td>1</td>
               </tr><tr>
                 <td class="border border-slate-600">Digital Height Gauge</td>
                 <td>Mitutoyo</td>
                 <td>0-50</td>
-                <td>1</td>
               </tr><tr>
                 <td class="border border-slate-600">Coordinate Measuring Machine</td>
                 <td class="border-b border-slate-600">Hexagon</td>
                 <td class="border-b border-slate-600">Classic0.6.08.06</td>
-                <td class="border-b border-slate-600">1</td>
               </tr><tr>
                 <td class="border border-slate-600">Injection Molding Machine</td>
                 <td>Engel</td>
                 <td>80T-350T</td>
-                <td>13</td>
                 <td class="border border-slate-600">Injection Molding Machine</td>
               </tr>
               </tbody>
@@ -577,16 +567,16 @@
             </div>
 
             <div class="group">
-              <div class="w-full overflow-hidden rounded-lg">
-                <img src="img/customers/lenovo.jpg" alt="lenovo"
-                  class="h-full w-full object-cover object-center group-hover:opacity-75">
+              <div class="rounded-lg flex justify-center">
+                <img src="img/customers/hp.jpg" alt="hp"
+                  class="w-1/2 h-1/2 object-cover object-center group-hover:opacity-75">
               </div>
             </div>
 
             <div class="group">
-              <div class="rounded-lg flex justify-center">
-                <img src="img/customers/hp.jpg" alt="hp"
-                  class="w-1/2 h-1/2 object-cover object-center group-hover:opacity-75">
+              <div class="w-full overflow-hidden rounded-lg">
+                <img src="img/customers/lenovo.jpg" alt="lenovo"
+                  class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
             </div>
 
