--- a/index.html
+++ b/index.html
@@ -669,6 +669,17 @@
       </div>
     </main>
   </div>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JGDWLD0YM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5JGDWLD0YM');
+  </script>
+
 </body>
 
 </html>
