update new img and address

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="mx-auto max-w-3xl pt-20 pb-32 sm:pt-48 sm:pb-40">
           <div>
             <div>
-              <h1 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Complete Automation Product Solutions</h1>
+              <h1 class="text-4xl font-bold tracking-tight sm:text-center sm:text-6xl">Precision Machining Services</h1>
               <p class="mt-6 text-lg leading-8 text-gray-600 sm:text-center">
                 Focuses on the field of automation, CNC machining, injection mold manufacturing and assembling products, providing one-stop solution in industrial field. 
               </p>
@@ -181,7 +181,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/11.jpg" alt="Precision Products"
+                <img src="img/products/21.jpg" alt="Precision Products"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Precision Products</h3>
@@ -211,7 +211,7 @@
             <div class="group">
               <div
                 class="aspect-w-16 aspect-h-10 w-full overflow-hidden rounded-lg bg-gray-200 xl:aspect-w-16 xl:aspect-h-10">
-                <img src="img/products/14.jpg" alt="Part of Fixture"
+                <img src="img/products/22.jpg" alt="Part of Fixture"
                   class="h-full w-full object-cover object-center group-hover:opacity-75">
               </div>
               <h3 class="mt-4 text-sm text-gray-700">Part of Fixture</h3>
@@ -624,17 +624,21 @@
       <div class="bg-white">
         <a name="contact"></a>
         <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-          <div class="grid grid-cols-2 gap-x-4">
+          <div class="grid grid-cols-1 gap-x-4">
             <div class="group relative text-sm">
               <div>
                 <p id="men-accessories-heading-mobile" class="font-medium text-gray-900">Contact us</p>
                 <ul role="list" aria-labelledby="men-accessories-heading-mobile" class="mt-6 flex flex-col space-y-6">
                   <li class="flow-root">
-                    <span class="-m-2 block p-2 text-gray-500">Phone: +86 130-1257-6506 Mr. Lv</span>
+                    <span class="-m-2 block p-2 text-gray-500">Mike: +86 18660580659
+                      MikeDingSeng@163.com
+                    </span>
                   </li>
 
                   <li class="flow-root">
-                    <span class="-m-2 block p-2 text-gray-500">Email: WHDINGSHENG@163.com</span>
+                    <span class="-m-2 block p-2 text-gray-500">David: +86 13081610768
+                      DavidDingSeng@163.com
+                    </span>
                   </li>
 
                   <li class="flow-root">
